[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.22",
    "langchain-openai>=0.3.14",
    "pypdf>=5.4.0",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
